# haskell-static-site

./: .gitignore  README.md  default.nix  shell.nix
client/: client.cabal
client/lib/: Client.hs
common/: common.cabal
common/lib/: Common.hs
common/lib/CMarkGFM/: Extended.hs
posts/: hello-world.md
server/: server.cabal
server/src/: Main.hs
