cabal-version: 2.2
name: server
version: 0.1.0.0
license: BSD-3-Clause
author: Brad Parker
maintainer: hi@bradparker.com
build-type: Simple

executable server
  main-is:
    Main.hs
  hs-source-dirs:
    src
  build-depends:
    base >=4.11 && <4.12,
    aeson,
    bytestring,
    common,
    ghcjs-dev-server,
    http-types,
    lucid,
    miso,
    servant,
    servant-server,
    wai,
    warp
  default-language:
    Haskell2010
